# bter-graph-generator

./: .gitignore  CMakeLists.txt  README.md  build_das  main.cpp
analyze/: analyze.py  benchmark.py  extract_largest_component.py  extraction.py
benchmark/: main.py
bter/: BterExport.cpp  BterExport.h  BterPhases.cpp  BterPhases.h  BterPhasesGpu.cpp  BterPhasesGpu.h  BterPhasesSeq.cpp  BterPhasesSeq.h  BterSamples.h  BterSetup.cpp  BterSetup.h  CMakeLists.txt
bter/gpu/: .phase_two.cu.swp  CMakeLists.txt  Phases.cu  PhasesKernel.cu  phase_one.cu  phase_two.cu  phases.cu
bter_gpu/: CMakeLists.txt  test.cu
bter_seq/: BterPhases.cpp  BterPhases.h  BterSetup.cpp  BterSetup.h  CMakeLists.txt
parameter-data-extraction/: analyze.py  main.py
parameters/: main.py  search.py  test.py
search_parameters/: main.py  parameter_search.py  test.py
spdlog/: async_logger.h  common.h  formatter.h  logger.h  spdlog.h
spdlog/details/: async_log_helper.h  async_logger_impl.h  file_helper.h  log_msg.h  logger_impl.h  mpmc_bounded_q.h  os.h  pattern_formatter_impl.h  registry.h  spdlog_impl.h
spdlog/fmt/: fmt.h  ostr.h
spdlog/fmt/bundled/: format.cc  format.h  ostream.cc  ostream.h  posix.cc  posix.h  time.h
spdlog/sinks/: android_sink.h  ansicolor_sink.h  base_sink.h  dist_sink.h  file_sinks.h  msvc_sink.h  null_sink.h  ostream_sink.h  sink.h  stdout_sinks.h  wincolor_sink.h
test/: CMakeLists.txt
test/bter/: CMakeLists.txt  PhasesTest.cpp  SetupTest.cpp
test/bter_seq/: CMakeLists.txt  PhasesTest.cpp  SetupTest.cpp
